[package]
edition = "2018"
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
description = "Generates Rust implementations for all messages available on the system"
license = "MIT"
name = "rosrust_msg"
readme = "../README.md"
repository = "https://github.com/adnanademovic/rosrust"
version = "0.1.6"
build = "build.rs"

[dependencies]
serde = "1.0.127"
serde_derive = "1.0.127"
serde-big-array = "0.5.1"

[dependencies.rosrust]
path = "../rosrust"
version = "0.9.10"
